--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "redux": "^3.7.2",
-    "youtube-api-search": "0.0.5"
+    "redux": "^3.7.2"
   }
 }
