--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.15.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.24.1",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
@@ -37,6 +39,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
+    "redux-form": "^7.4.2",
+    "redux-promise": "^0.6.0",
     "youtube-api-search": "0.0.5"
   }
 }
